// Code generated by goctl. DO NOT EDIT.
syntax = "proto3";
	
option go_package = "./goodsRpc";

package goods;

message EmptyReq{}
message GoodsInfo {
	 string id = 1;
	 string name = 2;
	 string spec = 3;
	 string cover = 4;
	 int64 sellPrice = 5;
	 int64 storeQty = 6;
	 int64 state = 7;
	 int64 isSpecial = 8;
	 string unitId = 9;
	 string unitName = 10;
	 string platId = 11;
	 int64 viewNum = 12;
}
message IdReq {
	optional string id = 1;
}
message GetPageReq {
	optional int64 page = 1;
	optional int64 size = 2;
	optional string sort = 3;
	optional int64 totalFlag = 4;
}
message GetHotPageByCursorReq {
	optional int64 page = 1;
	optional int64 size = 2;
	optional int64 cursor = 3;
	optional string lastId = 4;
}
message GetPageResp {
	 int64 page = 1;
	 int64 size = 2;
	repeated GoodsInfo list = 3;
	 bool isCache = 4;
	optional int64 total = 5;
	optional string lastId = 6;
	optional int64 cursor = 7;
	optional bool isEnd = 8;
}
message GetPageByCursorResp {
	 int64 size = 1;
	 bool isCache = 2;
	 bool isEnd = 3;
	 string lastId = 4;
	 int64 cursor = 5;
	repeated GoodsInfo list = 6;
}
message SuccResp {
	 int64 code = 1;
}

	
service goods {
	rpc GetOne(IdReq) returns (GoodsInfo);
	rpc GetPage(GetPageReq) returns (GetPageResp);
	rpc GetHotPageByCursor(GetHotPageByCursorReq) returns (GetPageByCursorResp);
}

